Albina Website: * making contrast better between background color (now white) and text. * fixing anywhere slider next/previous buttons so they don't jump when mouse is held between picture and background. *

--- a/src/Presentation/Nop.Web/Plugins/SevenSpikes.Nop.Plugins.AnywhereSliders/Themes/Venture/Content/slick/anywhereSliders.css
+++ b/src/Presentation/Nop.Web/Plugins/SevenSpikes.Nop.Plugins.AnywhereSliders/Themes/Venture/Content/slick/anywhereSliders.css
@@ -53,7 +53,7 @@ div .first-slide {
     margin: auto;
 }
 .anywhere-slider .slick-prev {
-	left: -50px;
+	left: -750px;
 }
 .slider-wrapper:hover .slick-prev {
     left: 0;
@@ -62,7 +62,7 @@ div .first-slide {
     content: "r";
 }
 .anywhere-slider .slick-next {
-    right: -50px;
+    right: -750px;
 }
 .slider-wrapper:hover .slick-next {
     right: 0;
