--- a/src/Presentation/Nop.Web/Themes/Venture/Content/css/styles.css
+++ b/src/Presentation/Nop.Web/Themes/Venture/Content/css/styles.css
@@ -190,7 +190,6 @@ script {
 
 body {
     max-width: 100%;
-	background-color: #f0f0f0;
 	overflow-x: hidden; /* responsive navigation & filters scroll bug fix*/
 	font: normal 15px 'Fjalla One', sans-serif;
     color: #2c2c2c;
@@ -1137,7 +1136,7 @@ body:after {
 }
 .header { 
     background: #2c2c2c;
-    color: #909090;
+    color: #000;
 	text-align: center; 
 }
 .header:after { 
